--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta charset="utf-8">
     <title>Astro Weight Calculator</title>
   </head>
   <body>
-     <!-- Write your markup here  -->
+    <input id="user-weight" type="text" placeholder="Weight (lbs)" />
+    <select id='planets'>
 
-    <script src="main.js" charset="utf-8"></script>
+    </select>
+    <p id = 'output'></p>
+    <button id = 'calculate-button' onclick='handleClickEvent()'>Calculate</button>
+
   </body>
+  <script src="main.js" charset="utf-8"></script>
 </html>
